crates/djls-python/tests/snapshots/corpus__repos__pretix__src__pretix__plugins__banktransfer__templatetags__dotdecimal.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.plugins.banktransfer.templatetags.dotdecimal::filter::dotdecimal":
    expects_arg: false
    arg_optional: false
block_specs: {}
